# ChangeLog for dev-java/mckoi
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/mckoi/ChangeLog,v 1.12 2007/12/19 04:41:40 wltjr Exp $

  19 Dec 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  -mckoi-1.0.3.ebuild:
  Removed gen1 version.

  28 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  mckoi-1.0.3-r1.ebuild:
  stable x86, bug 200587

*mckoi-1.0.3-r1 (29 Apr 2007)

  29 Apr 2007; Vlastimil Babka <caster@gentoo.org> +mckoi-1.0.3-r1.ebuild:
  Revbump for migration to gen-2 eclasses.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

*mckoi-1.0.3 (21 Dec 2004)

  21 Dec 2004; Thomas Matthijs <axxo@gentoo.org> +files/build.xml,
  +files/mckoi-1.0.3-jikes.patch, +mckoi-1.0.3.ebuild:
  version bump, Ebuild submitted by Edwin Shin <eddie@cs.cornell.edu> and Jan
  Brinkmann <lucky@the-luckyduck.de>. fixes 75112

  21 Dec 2004; Thomas Matthijs <axxo@gentoo.org> mckoi-1.0.2.ebuild:
  fixes 75110

  03 Nov 2004; Thomas Matthijs <axxo@gentoo.org> mckoi-1.0.2.ebuild:
  depend on app-arch/unzip

  17 Oct 2004; Thomas Matthijs <axxo@gentoo.org> mckoi-1.0.2.ebuild:
  keyword x86

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org> mckoi-1.0.2.ebuild:
  use java-pkg_dohtml instead of dohtml to also install the package-list in
  case of api docs: #50740

*mckoi-1.0.2 (12 Jan 2004)

  12 Jan 2004; Karl Trygve Kalleberg <karltk@gentoo.org> mckoi-1.0.2.ebuild:
  Initial import.  Ebuild submitted by myself.