@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX build.xml 1453 RMD160 f8b1b8eb447c152f1b9147063b5afd2ad987c92c SHA1 8d35c0cc077c7b1b324c1199eae243d40d3f344a SHA256 74b038a3e87ece9cc5195b5380dd64cf2e8cab6a59c82fb9b0275ae89cb8860e
 AUX mckoi-1.0.3-jikes.patch 1728 RMD160 c59b07c2e75ff2921e95ffcac5d1a4150facd9c6 SHA1 fbcfb9b7b77ce27e164752188be69a1444b5f41a SHA256 d3f658c8c55cb54250717968bfb80626fd92d1082e61b2364732889dc2c6b584
 DIST mckoi1.0.3.zip 2192577 RMD160 ae5c47a0210ded4689daf90c95e48238895910ee SHA1 c63f13632861f84053caff5c69f3fa4d49cdfca6 SHA256 ffe54237dcdee9752489530347830a752a5606d7d5e97c2d395bf83355bee8df
-EBUILD mckoi-1.0.3-r1.ebuild 1301 RMD160 285c7fa6b79f5c6e9a57add13e94a01dc2e710be SHA1 00af2c5c4b0382f5e164ed3646133a8404426d5c SHA256 3d0ec604900fdda34fcb5e023dadde7aecd6cf3ae6e1122681a2214b0dc59c0c
-MISC ChangeLog 1537 RMD160 1343e82879acd63a972bd8a6a7e21bbfa4fd0786 SHA1 b4ad5cd3633d5fed36be6b6a1c3a9526f8f01fe6 SHA256 02da66ddc348e6515dad96b3ec8a5c141dce5e1867edbf00e2ff33bdd90b9b4e
+EBUILD mckoi-1.0.3-r1.ebuild 1309 RMD160 e14426c62d35b3746791e1c31ce3320c1f836977 SHA1 3277b0047b955a19b9d839fadc857b2a3444e88a SHA256 fafa06cc237f93a839d39f28780a1988add8773896bbb476baa29fe1d9d210cf
+MISC ChangeLog 1630 RMD160 ac92b24a32137a7689c23b607086cc63765a48e1 SHA1 8253bf6c6aaeadeaed740fcf6a5cd1b0ae85d94c SHA256 cec4529dc2833d31e47cd7ee7b732beaaccfbf254603af7b911db401f9e3b795
 MISC metadata.xml 842 RMD160 0cee903378ef42b90b23a4c4468b4daeffba6532 SHA1 9ed1bd576a5cb19bb926cb601e11c28db4283afb SHA256 5bf71a81d676170fc6727754536987acb0089a3af5227a4fdde32e316f40c6a2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkkMHkcACgkQRh6X64ivZaJXPQCdHQUwD/FFqbcEcZoHRzAZwrgP
+7n4AnjvIn83YSVySnaRtaYCnTo5MeGwd
+=sJMS
+-----END PGP SIGNATURE-----
