@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/mckoi
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/mckoi/ChangeLog,v 1.12 2007/12/19 04:41:40 wltjr Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/mckoi/ChangeLog,v 1.13 2008/11/01 09:15:45 serkan Exp $
+
+  01 Nov 2008; Serkan Kaba <serkan@gentoo.org> mckoi-1.0.3-r1.ebuild:
+  Keyword for amd64.
 
   19 Dec 2007; William L. Thomson Jr. <wltjr@gentoo.org>
   -mckoi-1.0.3.ebuild:
